configurator/rendered/frontend/sourcegraph-frontend.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Serves the frontend of Sourcegraph via HTTP(S).
  labels:
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
    app.kubernetes.io/component: frontend
  name: sourcegraph-frontend
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sourcegraph-frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sourcegraph-frontend
        deploy: sourcegraph
    spec:
      containers:
        - name: frontend
          image: index.docker.io/sourcegraph/frontend:insiders@sha256:53c8a0233ed9f3aff61f98fc51e15c2aedf51060591422cb53fc65b37bb64dc4
          args:
            - serve
          terminationMessagePolicy: FallbackToLogsOnError
          livenessProbe:
            httpGet:
              path: /healthz
              port: debug
              scheme: HTTP
            initialDelaySeconds: 300
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: debug
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 5
          ports:
            - containerPort: 3080
              name: http
            - containerPort: 3090
              name: http-internal
            - containerPort: 6060
              name: debug
          resources:
            limits:
              cpu: "2"
              ephemeral-storage: 8Gi
              memory: 4G
            requests:
              cpu: "2"
              ephemeral-storage: 4Gi
              memory: 2G
          volumeMounts:
            - mountPath: /mnt/cache
              name: cache-ssd
        - name: jaeger-agent
          image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:22ecc0f4c041fb22b1b8c5a7c6f0f5233c80b147e26604ebe310a05860089dca
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
          resources:
            limits:
              cpu: "1"
              memory: 500M
            requests:
              cpu: 100m
              memory: 100M
          args:
            - --reporter.grpc.host-port=jaeger-collector:14250
            - --reporter.type=grpc
      securityContext:
        runAsUser: 0
      serviceAccountName: sourcegraph-frontend
      volumes:
        - emptyDir: {}
          name: cache-ssd
